--- a/styles.css
+++ b/styles.css
@@ -44,41 +44,31 @@ button {
     width: 90vw;
     height: 75vw;
 }
-#weight {
-    width: 6vw;
-    height: 20px;
-    padding: 0 3vw;
+#weight, #date {
+    padding: 0 3vw; 
     border: 2px solid rgba(160, 160, 160, 0.2);
     border-radius: 5px;
     box-shadow: 0 2px 2px rgba(160, 160, 160, 0.2);
     appearance: textfield;
+    -moz-appearance: textfield;
+}
+#weight {
+    width: 6vw;
+    height: 20px;
 }
 #weight::-webkit-outer-spin-button,
 #weight::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0;
 }
-#weight {
-    appearance: textfield;
-    -moz-appearance: textfield;
-}
 #date {
     width: 32vw;
     height: 20px;
-    padding: 0 3vw;
-    border: 2px solid rgba(160, 160, 160, 0.2);
-    border-radius: 5px;
-    box-shadow: 0 2px 2px rgba(160, 160, 160, 0.2);
-    appearance: textfield;
 }
 #date::-webkit-outer-spin-button,
 #date::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0;
-}
-#date {
-    appearance: textfield;
-    -moz-appearance: textfield;
 }
 #weightInputCard {
     display: grid;
@@ -171,5 +161,9 @@ button {
     grid-template-columns: 3fr 1fr;
     justify-content: space-between;
     align-items: center;
-    padding: 0 2vw 0 2vw;
+    padding: 0 4vw 0 4vw;
+    border-top: 2px dashed rgba(160, 160, 160, 0.2);
+}
+#tableRow:first-child {
+    border-top: 2px dashed rgba(0, 0, 0, 0);
 }
